--- a/main-lovers/package.json
+++ b/main-lovers/package.json
@@ -11,42 +11,59 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.10",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@react-spring/web": "^9.5.5",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@types/node": "20.2.3",
-    "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "bufferutil": "^4.0.7",
     "chart.js": "^4.3.0",
+    "child_process": "^1.0.2",
+    "cloudinary": "^1.37.0",
+    "cloudinary-core": "^2.13.0",
+    "cloudinary-react": "^1.8.1",
     "color-support": "^1.1.3",
+    "cors": "^2.8.5",
+    "create-context": "^1.0.0",
     "daisyui": "^2.51.6",
     "dayjs": "^1.11.7",
     "delegates": "^1.0.0",
+    "downshift": "^7.6.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "fs": "^0.0.1-security",
+    "html-loader": "^4.2.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
-    "next": "^13.4.3",
+    "next": "^13.4.4",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.12.0",
+    "node-fetch": "^3.3.1",
+    "p-sleep": "^1.1.0",
+    "playwright": "^1.34.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.2",
     "react-router-dom": "^6.11.2",
+    "react-tinder-card": "^1.6.2",
     "react-toastify": "^9.1.3",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
-    "utf-8-validate": "^5.0.10",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "@playwright/test": "^1.34.3",
+    "@types/bcrypt": "^5.0.0",
+    "use-debounce": "^9.0.4",
+    "zod": "^3.21.4"
   }
 }
