--- a/main-lovers/package.json
+++ b/main-lovers/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "bufferutil": "^4.0.7",
     "chart.js": "^4.3.0",
     "child_process": "^1.0.2",
     "cloudinary": "^1.37.0",
@@ -58,6 +59,7 @@
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "utf-8-validate": "^5.0.10",
     "zod": "^3.21.4"
   },
   "devDependencies": {
