--- a/main-lovers/package.json
+++ b/main-lovers/package.json
@@ -56,6 +56,7 @@
     "react-toastify": "^9.1.3",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
+    "stripe": "^12.8.0",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
