--- a/main-lovers/tsconfig.json
+++ b/main-lovers/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "es2022",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext",
+      "es2020"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -9,6 +14,12 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "preserveConstEnums": true,
+    "types": [
+      "node"
+    ],
+    "outDir": "dist",
+    "sourceMap": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -20,9 +31,21 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/PrivateChat", "src/app/components/react-tinder-card/index.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/**/*",
+    "src/app/PrivateChat",
+    "src/app/components/react-tinder-card/index.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
