--- a/main-lovers/package.json
+++ b/main-lovers/package.json
@@ -17,6 +17,7 @@
     "@mapbox/node-pre-gyp": "^1.0.10",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@react-spring/web": "^9.5.5",
+    "@sendgrid/mail": "^7.7.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@types/node": "20.2.3",
