finish pwd reset

--- a/main-lovers/package.json
+++ b/main-lovers/package.json
@@ -66,6 +66,7 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "utf-8-validate": "^5.0.10",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
