add invalid email validation and toaster on registration

--- a/main-lovers/package.json
+++ b/main-lovers/package.json
@@ -2,6 +2,9 @@
   "name": "main-lovers",
   "version": "0.1.0",
   "private": true,
+  "react": "next",
+  "react-dom": "next",
+  "next": "canary",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
