--- a/main-lovers/tsconfig.json
+++ b/main-lovers/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/PrivateChat", "src/app/components/react-tinder-card/index.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/PrivateChat", "src/app/components/react-tinder-card/index.tsx", "UnitTest/tests/deletedtestadmin.spec.ts"],
   "exclude": ["node_modules"]
 }
