--- a/main-lovers/package.json
+++ b/main-lovers/package.json
@@ -49,11 +49,13 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
     "react-router-dom": "^6.11.2",
     "react-tinder-card": "^1.6.2",
     "react-toastify": "^9.1.3",
+    "react-use": "^17.4.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "swiper": "^9.3.2",
