--- a/main-lovers/package.json
+++ b/main-lovers/package.json
@@ -50,6 +50,7 @@
     "next": "^13.4.4",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.12.0",
+    "next-swagger-doc": "^0.4.0",
     "node-fetch": "^3.3.1",
     "p-sleep": "^1.1.0",
     "playwright": "^1.34.3",
