--- a/private-chat/package.json
+++ b/private-chat/package.json
@@ -18,7 +18,9 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
     "nodemon": "^2.0.22",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
