--- a/main-lovers/package.json
+++ b/main-lovers/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blunck/next-html": "^1.0.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -67,6 +68,8 @@
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "stripe": "^12.8.0",
+    "swagger-ui-dist": "^4.19.0",
+    "swagger-ui-react": "^4.19.0",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
